--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "vite": "^7.0.4"
     },
     "dependencies": {
-        "@heroicons/react": "^2.2.0"
+        "@heroicons/react": "^2.2.0",
+        "ziggy-js": "^2.6.0"
     }
 }
